--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
   - task: CopyFiles@2
     inputs:
       Contents: 'dist/**' # Pull the build directory (Vue)
-      TargetFolder: '$(Build.ArtifactStagingDirectory)''
+      TargetFolder: '$(Build.ArtifactStagingDirectory)'
   - task: PublishBuildArtifacts@1
     inputs: 
       pathtoPublish: $(Build.ArtifactStagingDirectory) # dist or build files
