--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,10 +29,15 @@ steps:
       cd frontend
       npm install
       npm run build
+      cd ..
     displayName: 'npm install and build'
   - task: CopyFiles@2
     inputs:
-      Contents: 'dist/**' # Pull the build directory (Vue)
+      Contents: 'server/server'
+      TargetFolder: '$(Build.ArtifactStagingDirectory)'
+  - task: CopyFiles@2
+    inputs:
+      Contents: 'frontend/dist/**' # Pull the build directory (Vue)
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
   - task: PublishBuildArtifacts@1
     inputs: 
