--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "form-data": "^3.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "whatwg-fetch": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
